@@ -1,3 +1,8 @@
+2006-05-02  Marius Vollmer  <mvo@zagadka.de>
+
+	* Makefile.am (SCM_BENCHMARKS_DIRS, dist-hook): Removed, they are
+	no longer needed and lead to unclean tarballs.
+
 2004-01-23  Dirk Herrmann  <dirk@dirk-herrmanns-seiten.de>
 
 	* lib.scm: Extracted '/i' to toplevel.  Print the guile version
